<resources>
    <string name="app_name">My Notes 0.2</string>
    <string name="notes_list">Notes list:</string>
    <string name="note_details">Note details:</string>
    <string name="note_body">note body</string>
    <string name="note_created">note created: 14/05/2021</string>
    <string name="note_title">note title</string>
    <string name="change_text">…</string>
    <string name="action_settings">Settings</string>
    <string name="about">© Yuri Dyachenko, Geek Brains student (2021)</string>
    <string name="action_about">About</string>
    <string name="action_search">Search</string>
    <string name="nothing_found">Nothing found</string>
    <string name="edit_note_via_popup_menu">Edit note via popup menu</string>
    <string name="apply">Apply</string>
    <string name="edit_note_created">Edit note created</string>
    <string name="edit_note_body">Edit note body</string>
    <string name="edit_note_title">Edit note title</string>
    <string name="in_developing">In developing…</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>