<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NoteFragment">

    <TextView
        style="@style/FragmentHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_details" />

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fragment_header_padding"
        android:text="@string/note_title"
        android:textColor="@color/teal_700"
        android:textSize="@dimen/title_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/created_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="@dimen/fragment_header_padding"
            android:text="@string/note_created"
            android:textSize="@dimen/created_text_size" />

        <Button
            android:id="@+id/created_change_button"
            android:layout_width="@dimen/change_button_width"
            android:layout_height="match_parent"
            android:backgroundTint="@color/fragment_header_background"
            android:text="@string/change_text"
            android:textColor="@color/purple_700" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/body_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fragment_header_padding"
            android:text="@string/note_body"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/body_text_size" />
    </ScrollView>
</LinearLayout>